client/one/less/style.less
/* ... */
.btn-default,
.btn-default:focus,
.btn-default:hover,
.btn-default:active,
.btn-default.active,
.open .dropdown-toggle.btn-default {
    background-color: #fff;
    border-color: #2fa8c7;
    color: #2fa8c7;
    .box-shadow(0 1px 2px rgba(50, 50, 50, 0.1));

    &:not(.disabled):not([disabled]) {
        &:hover {
            border-color: #2488a1;
            color: #2488a1;
        }
    }

    &.disabled {
        color: #d9d9d9;
        pointer-events: all;
        cursor: auto;
        box-shadow: none;
    }
}

.btn-red,
.btn-red:focus,
.btn-red:hover,
.btn-red:active,
.btn-red.active,
.open .dropdown-toggle.btn-red {
    background-color: #fff;
    border-color: #ff0000;
    color: #ff0000;
    .box-shadow(0 1px 2px rgba(50, 50, 50, 0.1));

    &:hover {
        border-color: #aa0000;
        color: #aa0000;
    }
}

.btn-add,
.btn-add:focus,
.btn-add:hover,
.btn-add:active,
.btn-add.active {
    background-color: @add-color;
    border-color: @add-color;
    color: #fff;
    .box-shadow(0 1px 2px rgba(50, 50, 50, 0.1));

    &:hover {
        background-color: @add-color-hover;
        border-color: @add-color-hover;
    }
}

.btn:focus,
.btn:active:focus,
.btn.active:focus {
    outline: none;
    outline-offset: 0;
}

.btn[disabled] {
    opacity: 0.3;
    cursor: default;
    color: #d9d9d9;
    pointer-events: auto;
}

.btn[disabled]:hover {
    color: #d9d9d9;
    border-color: #d9d9d9;
}

.dropdown-menu {
    margin-top: 1px;
    border: 1px solid #d2d2d2;
    .border-radius(2px);
    .box-shadow(0 1px 2px rgba(50, 50, 50, 0.1));


    li {
        position: relative;
    }
}

.dropdown-menu-activation{
    border: 1px solid #2fa8c7;
    color: #2fa8c7;
    padding-left: 5px;
    padding-right: 6px;

    &.enabled > li > a {
        color: #2fa8c7;
    }

    & > li > a {
        color: #2fa8c7;
        padding-left: 7px;
        padding-right: 6px
    }

    & > li > a:hover {
        background: #f68620;
        color: #fff;
    }
}

.zem-tabset .nav-tabs {
    & > li {
        margin-bottom: 0;

        & > a,
        & > a:hover,
        & > a:active,
        & > a:visited {
            border-top: 1px solid #d2d2d2;
            border-left: 1px solid #d2d2d2;
            border-right: 1px solid #d2d2d2;
            border-bottom: 0;
        }

        &.active > a {
            & > tab-heading {
                & > a,
                & > a:hover,
                & > a:active,
                & > a:visited {
                    font-weight: bold;
                    margin-bottom: -1px;
                    padding-top: 9px;
                    padding-bottom: 11px;
                }

                & > .tab-top {
                    width: 100%;
                    height: 2px;
                    background-color: #2fa8c7;
                    .border-radius(2px 2px 0 0);
                    margin-top: -1px;
                    margin-left: -1px;
                    padding-right: 2px;
                    box-sizing: content-box;
                }
            }
        }

        & > a {
            padding: 0px;

            .border-radius(2px 2px 0 0);

            & > tab-heading {
                & > a,
                & > a:hover,
                & > a:active,
                & > a:visited {
                    display: block;
                    padding: 10px 15px;
                    text-decoration: none;
                    font-weight: normal;
                    font-size: 13px;
                    color: #414141;
                    text-transform: uppercase;
                }
            }
        }
    }
}

.warning-paused {
    margin-left: 8px;
    margin-top: 12px;
    display: inline-block;
    color: #bd0a00;
    font-size: 12px;
}

.little-red-square {
    margin-left: 24px;
    width: 9px;
    height: 9px;
    background-color: #bd0a00;
    display: inline-block;
    margin-top: 12px;
    border-radius: 2px;
}


.input-group {
    .input-group-addon {
        .border-radius(2px 0 0 2px);
        font-weight: lighter;
        font-size: 14px;
        color: #414141;
    }
}

.input-one-char {
    width: 1em !important;
}

.input-mini {
    width: 6em !important;
}

.input-small {
    width: 9em !important;
}

.input-medium {
    width: 15em !important;
}

.input-large {
    width: 18em !important;
}

.alert {
    margin-bottom: 0;
    .border-radius(0);

    &.alert-info {
        background-color: #fffee9;
        border: 1px solid #ede652;
        font-size: 12px;
        font-color: #414141;
    }
}

.popover {
    .border-radius(0);
    .box-shadow(none);
    border: none;
    padding: 0px;
    z-index: 100000;

    &:before {
        content: "";
        display: block;
        height: 2px;
        background-color: #2fa8c7;
        .border-radius(2px 2px 0px 0px);
    }

    .popover-inner {
        background-color: #fff;
        color: #414141;
        font-weight: 300;
        border: 1px solid #d2d2d2;
        border-top: 0px;
        .border-radius(0px 0px 2px 2px);
        .box-shadow(0 1px 2px rgba(50, 50, 50, 0.1));
    }

    &.top > .arrow {
        border-top-color: #d2d2d2;
        bottom: -10px;
    }

    &.left > .arrow {
        right: -10px;
    }

    &.right > .arrow {
        left: -10px;
    }
}

div[datepicker] {
    .btn,
    .btn:hover {
        border: 1px solid #fff;
        color: #414141;
        .border-radius(0);
        .box-shadow(none);

        &.active {
            border: 1px solid #2fa8c7;
            background-color: #2fa8c7;
            color: #fff;
        }

        .text-info {
            color: #414141;
            font-weight: 600;
        }
    }
}
/* ... */

